--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="top-menu container">
             <a class="top-menu-item active-page" href="index.html">Home</a>
             <a class="top-menu-item" href="adopt.html">Adopt</a>
-            <img class="top-menu-logo" src="/images/topLogo.webp">
+            <img class="top-menu-logo" src="images/topLogo.webp">
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
         </nav>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="carousel-img-container">
-            <img class="carousel-img" src="/images/carro1img.webp" id="carouselImg">
+            <img class="carousel-img" src="images/carro1img.webp" id="carouselImg">
         </div>
 
         <div class="carousel-selector">
