--- a/adopt.html
+++ b/adopt.html
@@ -15,7 +15,7 @@
         <nav class="top-menu container">
             <a class="top-menu-item" href="index.html">Home</a>
             <a class="top-menu-item  active-page" href="adopt.html">Adopt</a>
-            <img class="top-menu-logo" src="/images/topLogo.webp">
+            <img class="top-menu-logo" src="images/topLogo.webp">
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
         </nav>
