donate form fix

--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
                         <form class="donate-form">
                             <div class="donate-section">
                                 <p class="donate-pound">£</p>
-                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000">
+                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000"  required>
                             </div>
 
                             <div class="donate-buttons">
