added screen adaptation + mobile menu

--- a/adopt.html
+++ b/adopt.html
@@ -18,6 +18,7 @@
             <img class="top-menu-logo" src="images/topLogo.webp">
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
+            <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
         </nav>
     </header>
 
@@ -29,27 +30,30 @@
         </div>
 
         <div class="adopt-interface">
-            <div class="adopt-sort">
+
+            <a href="" class="sort-toggle" id="sortButton">Sort</a>
+
+            <div class="adopt-sort" id="sortInterface">
                 <h2>Sort</h2>
 
                 <div class="sort-section">
                     <h3>Species:</h3>
-                    <a href="" class="sort-button">Dogs</a>
-                    <a href="" class="sort-button">Cats</a>
-                    <a href="" class="sort-button">Other</a>
+                    <a href="" class="sort-button" id="dogs">Dogs</a>
+                    <a href="" class="sort-button" id="cats">Cats</a>
+                    <a href="" class="sort-button" id="other">Other</a>
                 </div>
 
                 <div class="sort-section">
                     <h3>Gender:</h3>
-                    <a href="" class="sort-button">Male</a>
-                    <a href="" class="sort-button">Female</a>
+                    <a href="" class="sort-button" id="male">Male</a>
+                    <a href="" class="sort-button" id="female">Female</a>
                 </div>
 
                 <div class="sort-section">
                     <h3>Age:</h3>
-                    <a href="" class="sort-button">Young</a>
-                    <a href="" class="sort-button">Adult</a>
-                    <a href="" class="sort-button">Senior</a>
+                    <a href="" class="sort-button" id="young">Young</a>
+                    <a href="" class="sort-button" id="adult">Adult</a>
+                    <a href="" class="sort-button" id="senior">Senior</a>
                 </div>
             </div>
 
@@ -103,6 +107,20 @@
         </div>
         <p class="footer-copyright">©Paw Sanctuary 2024</p>
     </footer>
+
+    <div class="modal mobile-menu hidden" id="mobileMenu">
+        <div id="mobileClose">
+            <div class="modal-close-line-1-mobile"></div>
+            <div class="modal-close-line-2-mobile"></div>
+        </div>
+        <div class="mobile-menu-items">
+            <a class="mobile-menu-item" href="index.html">Home</a>
+            <a class="mobile-menu-item active-page" href="adopt.html">Adopt</a>
+            <a class="mobile-menu-item" href="contacts.html">Contacts</a>
+            <a class="mobile-menu-item" href="" id="donateOpenMobile">Donate</a>
+        </div>
+    </div>
+
 
     <div class="modal hidden" id="donateModal">
         <div class="donate-modal">
@@ -160,7 +178,7 @@
                         </form>
                     </div>
 
-                    <div>
+                    <div class="donate-box">
                         <h2>P.O box</h2>
                         <h3>Paw Sanctuary <br>
                             729 Beverley Rd <br>
@@ -171,7 +189,6 @@
             </div>
         </div>
     </div>
-
     <script src="scripts.js"></script>
 </body>
 </html>
