--- a/animalprofile.html
+++ b/animalprofile.html
@@ -18,6 +18,7 @@
             <img class="top-menu-logo" src="images/topLogo.webp">
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
+            <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
         </nav>
     </header>
 
@@ -101,6 +102,19 @@
         <p class="footer-copyright">©Paw Sanctuary 2024</p>
     </footer>
 
+    <div class="modal mobile-menu hidden" id="mobileMenu">
+        <div id="mobileClose">
+            <div class="modal-close-line-1-mobile"></div>
+            <div class="modal-close-line-2-mobile"></div>
+        </div>
+        <div class="mobile-menu-items">
+            <a class="mobile-menu-item" href="index.html">Home</a>
+            <a class="mobile-menu-item active-page" href="adopt.html">Adopt</a>
+            <a class="mobile-menu-item" href="contacts.html">Contacts</a>
+            <a class="mobile-menu-item" href="" id="donateOpenMobile">Donate</a>
+        </div>
+    </div>
+
     <div class="modal hidden" id="donateModal">
         <div class="donate-modal">
             <div class="modal-close" id="donateClose">
@@ -157,7 +171,7 @@
                         </form>
                     </div>
 
-                    <div>
+                    <div class="donate-box">
                         <h2>P.O box</h2>
                         <h3>Paw Sanctuary <br>
                             729 Beverley Rd <br>
