--- a/contacts.html
+++ b/contacts.html
@@ -18,6 +18,7 @@
             <img class="top-menu-logo" src="images/topLogo.webp">
             <a class="top-menu-item  active-page" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
+            <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
         </nav>
     </header>
 
@@ -43,9 +44,7 @@
                 </div>
             </div>
 
-            <div class="contacts-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d495.64463470580966!2d-0.3573777764507043!3d53.7770900513909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4878be552ad97ec1%3A0xcfb04b1b614b2ee8!2s729%20Beverley%20Rd%2C%20Hull%20HU6%207EY%2C%20UK!5e0!3m2!1sen!2sua!4v1715767388897!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+            <iframe class="contacts-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d495.64463470580966!2d-0.3573777764507043!3d53.7770900513909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4878be552ad97ec1%3A0xcfb04b1b614b2ee8!2s729%20Beverley%20Rd%2C%20Hull%20HU6%207EY%2C%20UK!5e0!3m2!1sen!2sua!4v1715767388897!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
 
@@ -63,6 +62,19 @@
         </div>
         <p class="footer-copyright">©Paw Sanctuary 2024</p>
     </footer>
+
+    <div class="modal mobile-menu hidden" id="mobileMenu">
+        <div id="mobileClose">
+            <div class="modal-close-line-1-mobile"></div>
+            <div class="modal-close-line-2-mobile"></div>
+        </div>
+        <div class="mobile-menu-items">
+            <a class="mobile-menu-item" href="index.html">Home</a>
+            <a class="mobile-menu-item" href="adopt.html">Adopt</a>
+            <a class="mobile-menu-item active-page" href="contacts.html">Contacts</a>
+            <a class="mobile-menu-item" href="" id="donateOpenMobile">Donate</a>
+        </div>
+    </div>
 
     <div class="modal hidden" id="donateModal">
         <div class="donate-modal">
@@ -120,7 +132,7 @@
                         </form>
                     </div>
 
-                    <div>
+                    <div class="donate-box">
                         <h2>P.O box</h2>
                         <h3>Paw Sanctuary <br>
                             729 Beverley Rd <br>
