listings on adopt page are now automaticaly generated

--- a/adopt.html
+++ b/adopt.html
@@ -57,40 +57,11 @@
                 </div>
             </div>
 
-            <div class="adopt-listings">
+            <div class="adopt-listings" id="adoptListings">
                 
-                <a href="animalprofile.html#1">
-                    <div class="adopt-card">
-                        <img class="card-image" src="images/Rockstar/photo2.webp">
-                        <p class="card-pet-name female">Rockstar</p>
-                        <p class="card-animal-desc">Domestic short hair</p>
-                        <p class="card-animal-desc">Looking for love</p>
-                        <p class="card-animal-desc">729 Beverly</p>
-                    </div>
-                </a>
+                <!-- Animal cards go here -->
 
-                <a href="animalprofile.html#2">
-                    <div class="adopt-card">
-                        <img class="card-image" src="images/Barbie/photo4.jpg">
-                        <p class="card-pet-name female">Barbie</p>
-                        <p class="card-animal-desc">German Shepherd</p>
-                        <p class="card-animal-desc">Smart and loving</p>
-                        <p class="card-animal-desc">729 Beverly</p>
-                    </div>
-                </a>
-
-                <a href="animalprofile.html#3">
-                    <div class="adopt-card">
-                        <img class="card-image" src="images/Pepe/photo1.jpg">
-                        <p class="card-pet-name male">Pepe</p>
-                        <p class="card-animal-desc">Ferret</p>
-                        <p class="card-animal-desc">Loves to play</p>
-                        <p class="card-animal-desc">729 Beverly</p>
-                    </div>
-                </a>
-
-
-                <a class="load-more" href="">Load More +</a>
+                <a class="load-more" href="" id="loadMore">Load More +</a>
             </div>
         </div>
     </main>
@@ -190,5 +161,7 @@
         </div>
     </div>
     <script src="scripts.js"></script>
+    <script src="profile.js"></script>
+    <script src="listings.js"></script>
 </body>
 </html>
