filter works(somewhat), minor fixes + profile screen adaptation

--- a/adopt.html
+++ b/adopt.html
@@ -15,7 +15,7 @@
         <nav class="top-menu container">
             <a class="top-menu-item" href="index.html">Home</a>
             <a class="top-menu-item  active-page" href="adopt.html">Adopt</a>
-            <img class="top-menu-logo" src="images/topLogo.webp">
+            <a href="index.html"><img class="top-menu-logo" src="images/topLogo.webp"></a>
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
             <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
@@ -111,7 +111,7 @@
                         <form class="donate-form">
                             <div class="donate-section">
                                 <p class="donate-pound">£</p>
-                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000"  required>
+                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000" required>
                             </div>
 
                             <div class="donate-buttons">
@@ -160,8 +160,9 @@
             </div>
         </div>
     </div>
-    <script src="scripts.js"></script>
     <script src="profile.js"></script>
     <script src="listings.js"></script>
+    <script src="sort.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
