--- a/animalprofile.html
+++ b/animalprofile.html
@@ -15,7 +15,7 @@
         <nav class="top-menu container">
             <a class="top-menu-item" href="index.html">Home</a>
             <a class="top-menu-item  active-page" href="adopt.html">Adopt</a>
-            <img class="top-menu-logo" src="images/topLogo.webp">
+            <a href="index.html"><img class="top-menu-logo" src="images/topLogo.webp"></a>
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
             <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
@@ -46,12 +46,7 @@
                 <div class="profile-description">
                     <h2 id="profileBreed"></h2>
                     <h2>About <span id="profileName"></span></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur posuere justo at lorem gravida, vel semper elit suscipit. Nam maximus, felis sagittis iaculis ornare, nisl urna scelerisque quam, in consequat erat urna vel ex. Sed ac nisl a est placerat egestas. Aliquam erat volutpat. Sed dictum commodo diam, eget maximus dui venenatis non. Maecenas leo sem, mattis nec porta vel, malesuada id dui. Maecenas sit amet metus nisl. <br> <br>
-
-                        Duis dignissim nulla mollis venenatis dignissim. In pellentesque viverra erat, id gravida massa eleifend nec. Nulla in orci iaculis, pretium diam vel, feugiat neque. Ut venenatis quis tellus a lobortis. Morbi eu blandit lorem, eget aliquam nisi. Aliquam erat volutpat. Phasellus et interdum felis. Vestibulum imperdiet semper venenatis. Nunc in tempor erat, id fermentum tortor. Sed egestas mattis arcu vitae pharetra. Donec ornare gravida dictum. Vestibulum purus nulla, ultrices in pharetra eu, laoreet in dolor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum leo eros, convallis vel massa ut, bibendum lacinia turpis. <br> <br>
-                        
-                        Nam justo sapien, dapibus eget molestie non, gravida ac sem. Phasellus ut condimentum lorem. Curabitur leo lacus, pretium nec felis ut, facilisis commodo odio. Phasellus vitae tincidunt augue. Sed accumsan nibh sed elementum iaculis. Nulla vitae tortor vitae odio tempor rutrum et in ante. Donec euismod diam eget aliquet feugiat. Duis vestibulum, tortor eget varius efficitur, tellus nunc commodo lorem, eu feugiat eros tortor eget enim. Fusce vulputate dolor ipsum, ut interdum nisl ornare a. Integer vehicula, diam at lacinia porttitor, justo ipsum malesuada dolor, vel lacinia elit nulla eget augue. Vestibulum vulputate mi et arcu congue faucibus.
-                        </p>
+                    <p id="profileDescription"></p>
                 </div>
                 
                 <div class="profile-adopt">
@@ -133,7 +128,7 @@
                         <form class="donate-form">
                             <div class="donate-section">
                                 <p class="donate-pound">£</p>
-                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000"  required>
+                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000" required>
                             </div>
 
                             <div class="donate-buttons">
