--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="top-menu container">
             <a class="top-menu-item active-page" href="index.html">Home</a>
             <a class="top-menu-item" href="adopt.html">Adopt</a>
-            <img class="top-menu-logo" src="images/topLogo.webp">
+            <a href="index.html"><img class="top-menu-logo" src="images/topLogo.webp"></a>
             <a class="top-menu-item" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
             <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
