--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
         <nav class="top-menu container">
             <a class="top-menu-item" href="index.html">Home</a>
             <a class="top-menu-item" href="adopt.html">Adopt</a>
-            <img class="top-menu-logo" src="images/topLogo.webp">
+            <a href="index.html"><img class="top-menu-logo" src="images/topLogo.webp"></a>
             <a class="top-menu-item  active-page" href="contacts.html">Contacts</a>
             <a class="top-menu-item" href="#" id="donateOpen">Donate</a>
             <a class="mobile-button" id="mobileOpen" href=""><img src="images/mobile.svg"></a>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <iframe class="contacts-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d495.64463470580966!2d-0.3573777764507043!3d53.7770900513909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4878be552ad97ec1%3A0xcfb04b1b614b2ee8!2s729%20Beverley%20Rd%2C%20Hull%20HU6%207EY%2C%20UK!5e0!3m2!1sen!2sua!4v1715767388897!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="contacts-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d495.64463470580966!2d-0.3573777764507043!3d53.7770900513909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4878be552ad97ec1%3A0xcfb04b1b614b2ee8!2s729%20Beverley%20Rd%2C%20Hull%20HU6%207EY%2C%20UK!5e0!3m2!1sen!2sua!4v1715767388897!5m2!1sen!2sua" width="600" height="450" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
 
@@ -94,7 +94,7 @@
                         <form class="donate-form">
                             <div class="donate-section">
                                 <p class="donate-pound">£</p>
-                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000"  required>
+                                <input class="donate-money-input" type="number" placeholder="1 to 1000" id="donateInput" min="1" max="1000" required>
                             </div>
 
                             <div class="donate-buttons">
