--- a/contacts.html
+++ b/contacts.html
@@ -112,8 +112,8 @@
                             </div>
 
                             <div class="donate-inputs"> 
-                                <label for="secondName">Second Name</label>
-                                <input type="text" name="secondName" autocomplete="off" placeholder="Second name..." minlength="2" maxlength="20" required>
+                                <label for="secondName">Last Name</label>
+                                <input type="text" name="secondName" autocomplete="off" placeholder="Last name..." minlength="2" maxlength="20" required>
                             </div>
 
                             <div class="donate-inputs">
