--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
 
         <div class="contacts-head">
             <div class="line"></div>
-            <h1 class="contacts-header">Adopt</h1>
+            <h1 class="contacts-header">Contacts</h1>
             <div class="line"></div>
         </div>
 
